//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table SocialAccount {
  id String [pk]
  providerType String [not null]
  providerId String [not null]
  providerAccountId String [not null]
  oauthToken String
  oauthTokenSecret String
  refreshToken String
  accessToken String
  accessTokenExpires DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  walletAccountId String [not null]
  walletAccount WalletAccount [not null]

  indexes {
    (providerId, providerType, walletAccountId) [unique]
  }
}

Table Campaign {
  accountId String [pk]
  type String [not null]
  linkdropAccountId String [not null]
  linkdropAccount LinkdropAccount [not null]
}

Table LinkdropAccount {
  publicKey String [unique, not null]
  accountId String [pk]
  walletAccount WalletAccount [not null]
  walletAccountId String [not null]
  campaigns Campaign [not null]
}

Table WalletAccount {
  publicKey String [unique, not null]
  accountId String [pk]
  linkdropAccount LinkdropAccount
  socialAccounts SocialAccount [not null]
}

Ref: SocialAccount.walletAccountId > WalletAccount.accountId

Ref: Campaign.linkdropAccountId > LinkdropAccount.accountId

Ref: LinkdropAccount.walletAccountId - WalletAccount.accountId